--- a/web/src/main/resources/application.yml
+++ b/web/src/main/resources/application.yml
@@ -53,7 +53,7 @@ topics:
   subscriber: subscriber-topic
 
 gateway:
-  url: http://localhost:9000/
+  url: http://localhost:9000/message/api/v1/messages
 
 openApi:
   authorizationUrl: http://localhost:9000/oauth2/authorization/google
