--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>message</module>
         <module>web</module>
         <module>eureka-server</module>
+        <module>config-server</module>
         <module>api-gateway</module>
     </modules>
 
