--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@babel/polyfill": "7.2.5",
+    "@sentry/tracing": "^7.12.0",
+    "@sentry/vue": "^7.12.0",
     "@stomp/stompjs": "^6.1.2",
     "sockjs-client": "1.3.0",
     "vue": "^2.6.14",
