--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -9,3 +9,15 @@ spring:
 
 server:
   port: 8888
+
+management:
+  tracing:
+    enabled: true
+    sampling.probability: 1.0
+  endpoints:
+    web:
+      exposure:
+        include: liquibase, health, prometheus
+    distribution:
+      percentiles-histogram:
+        "[http.server.requests]": true
