--- a/web/package.json
+++ b/web/package.json
@@ -6,7 +6,7 @@
   "author": "Artiom",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server --config webpack.dev.js",
+    "start": "NODE_OPTIONS=--openssl-legacy-provider webpack-dev-server --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js"
   },
   "dependencies": {
